bandaid for dark mode tailwind bug

--- a/styles/global.css
+++ b/styles/global.css
@@ -132,10 +132,8 @@ dd {
   @apply hover:no-underline;
 }
 
-.post-preview {
-  .description {
-    @apply text-gray-500 dark:text-gray-400 mb-3;
-  }
+.post-preview .description {
+  @apply text-gray-500 dark:text-gray-400 mb-3;
 }
 
 .post-preview h2 {
